# imdb-chatbot

./: .gitignore  CHATGPT_IMPLEMENTATION.md  CODE_REFERENCE.md  README.md  env.example  main.py  pyproject.toml
.ipynb_checkpoints/: CODE_REFERENCE-checkpoint.md
PPT/: IMDB Agent.pptx
data/: imdb.duckdb  imdb_chatbot.db  imdb_chatbot.db-shm  imdb_chatbot.db-wal
data_setup/: data_setup.py
notebooks/: Langgraph Setup.ipynb  data_analysis.ipynb  prompt_testing.ipynb
notebooks/.ipynb_checkpoints/: data_analysis-checkpoint.ipynb  prompt_testing-checkpoint.ipynb
src/: __init__.py  agents.py  app.py  config.py  data_setup.py  prompts.py  telegram_bot.py  test_queries.py  tools.py
vectorstore/chroma/5f64e8f2-3715-4a11-999c-015fc21b9503/: index_metadata.pickle
vectorstore/chroma/9be1a639-c1be-4b5c-83a6-4c55276b17cf/: index_metadata.pickle
